# sourmash_plugin_avro

./: .gitignore  README.md  pyproject.toml  signature.avsc
src/: sourmash_plugin_avro.py
tests/: test_sourmash_plugin_avro.py
tests/test-data/: 47.avrosig
