[project]
name = "sourmash_plugin_avro"
requires-python = ">=3.8"
version = "0.1"

[metadata]
license = { text = "BSD 3-Clause License" }


[project.entry-points."sourmash.load_from"]
avro_reader = "sourmash_plugin_avro:load_sketches"

[project.entry-points."sourmash.save_to"]
avro_writer = "sourmash_plugin_avro:SaveSignatures_AvroFile"
