[project]
name = "sourmash_plugin_avro"
description = "sourmash plugin to store and save records in Avro format."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["avro"]

[metadata]
license = { text = "BSD 3-Clause License" }


[project.entry-points."sourmash.load_from"]
avro_reader = "sourmash_plugin_avro:load_sketches"

[project.entry-points."sourmash.save_to"]
avro_writer = "sourmash_plugin_avro:SaveSignatures_AvroFile"
